--- a/style.css
+++ b/style.css
@@ -76,3 +76,12 @@ h2{
     background-color: #61ec61;
     font-weight: bold;
 }
+
+.result-container{
+    margin: 0 auto;
+    text-align: center;
+}
+.result{
+    font-size: 24px;
+    padding: 5px;
+}
